fixed scrolling on smaller screens

--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    position: fixed;
     #console {
 
         height:50%;
@@ -46,7 +47,7 @@
             }
 
             .tail{
-                background-color: #EF4423;
+                background-color: #2A3492;
             }
 
         }
